Fixing #4625 : editor stay visible in a div with style 'visibility:hidden'.
git-svn-id: https://svn.ckeditor.com/CKEditor/trunk@4454 da63caf2-3823-0410-a1e8-d69ccee00dfb

--- a/_source/skins/kama/editor.css
+++ b/_source/skins/kama/editor.css
@@ -17,5 +17,5 @@ For licensing, see LICENSE.html or http://ckeditor.com/license
 html .cke_skin_kama,
 html.cke_skin_kama_container
 {
-	visibility: visible;
+	visibility: inherit;
 }
