--- a/_source/skins/v2/editor.css
+++ b/_source/skins/v2/editor.css
@@ -17,5 +17,5 @@ For licensing, see LICENSE.html or http://ckeditor.com/license
 html .cke_skin_v2,
 html.cke_skin_v2_container
 {
-	visibility: visible;
+	visibility: inherit;
 }
